; ModuleID = '/home/carl/AnghaBench/vlc/src/test/extr_interrupt.c_test_thread_cancel.c'
source_filename = "/home/carl/AnghaBench/vlc/src/test/extr_interrupt.c_test_thread_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @test_thread_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @test_thread_cancel(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = call i32 (...) @vlc_savecancel()
  store i32 %7, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @test_context_simple(i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @vlc_restorecancel(i32 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @vlc_interrupt_set(i32* %12)
  br label %14

14:                                               ; preds = %14, %1
  %15 = call i32 (...) @pause()
  br label %14
}

declare dso_local i32 @vlc_savecancel(...) #1

declare dso_local i32 @test_context_simple(i32*) #1

declare dso_local i32 @vlc_restorecancel(i32) #1

declare dso_local i32 @vlc_interrupt_set(i32*) #1

declare dso_local i32 @pause(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
